--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
@@ -94,51 +95,51 @@
     <main>
         <blockquote>
             <h1>AAAAAAAAAAAA!!</h1>
-            <h3>À‰E‚Ì–Á</h3>
+            <h3>åº§å³ã®éŠ˜</h3>
             <p class="quote">
-                ›{‚Ñ‚ÄŽv‚Í‚´‚ê‚Î‘¥‚¿<ruby>ã¦<rp>(</rp><rt>‚­‚ç</rt><rp>)</rp></ruby>‚µBŽv‚Ð‚Ä›{‚Î‚´‚ê‚Î‘¥‚¿<ruby>–w<rp>(</rp><rt>‚ ‚â‚¤</rt><rp>)</rp></ruby>‚µ
-                <br>„Ÿ„ŸEŽq
+                å­¸ã³ã¦æ€ã¯ã–ã‚Œã°å‰‡ã¡<ruby>ç½”<rp>(</rp><rt>ãã‚‰</rt><rp>)</rp></ruby>ã—ã€‚æ€ã²ã¦å­¸ã°ã–ã‚Œã°å‰‡ã¡<ruby>æ®†<rp>(</rp><rt>ã‚ã‚„ã†</rt><rp>)</rp></ruby>ã—
+                <br>â”€â”€å­”å­
             </p>
             <hr>
             <section>
-                <h2 id="news">>>‚¨’m‚ç‚¹<<</h2>
-                <small>ÅIXV 2024/02/14</small>
+                <h2 id="news">>>ãŠçŸ¥ã‚‰ã›<<</h2>
+                <small>æœ€çµ‚æ›´æ–° 2024/02/14</small>
                 <blockquote>
                     <ul>
                         <li>
-                            ™—ß˜a˜Z”N“x‘—§‚ê“üŠw–{ŽŽŒ±Ž©ŒÈÌ“_‘¬•ñ™
-                            <br>‰p:80
-                            <br>”:74
-                            <br>—:79
-                            <br>‘:54
-                            <br>ŽÐ:84
-                            <br>„Ÿ„Ÿ„Ÿ
-                            <br>Œv371
-                            <br>‘ŒêƒJƒX‰ß‹Ž–â‚Å‚Í90Žæ‚ê‚Ä‚½‚Ì‚É‰½‚È‚Ì
+                            â˜†ä»¤å’Œå…­å¹´åº¦å›½ç«‹é«˜å°‚å…¥å­¦æœ¬è©¦é¨“è‡ªå·±æŽ¡ç‚¹é€Ÿå ±â˜†
+                            <br>è‹±:80
+                            <br>æ•°:74
+                            <br>ç†:79
+                            <br>å›½:54
+                            <br>ç¤¾:84
+                            <br>â”€â”€â”€
+                            <br>è¨ˆ371
+                            <br>å›½èªžã‚«ã‚¹éŽåŽ»å•ã§ã¯90å–ã‚Œã¦ãŸã®ã«ä½•ãªã®
                         </li>
-                        <li>ŽG’k‰É‚ ‚Á‚½‚çŽQ‰Á‚µ‚æ‚¤‚©‚ÈA‚Å‚àƒgƒsƒbƒN‚È‚¢‚ñ‚¾‚æ‚Ë‚¦</li>
-                        <li>‚êŽóŒ±(&Œ§—§ŽóŒ±‚à)‚ÌŒ‹‰Ê‚Í‹³‚¦‚ç‚ê‚Ê‚±‚Æ‚ð³’m‚µ‚Ä‚Ù‚µ‚¢</li>
+                        <li>é›‘è«‡æš‡ã‚ã£ãŸã‚‰å‚åŠ ã—ã‚ˆã†ã‹ãªã€ã§ã‚‚ãƒˆãƒ”ãƒƒã‚¯ãªã„ã‚“ã ã‚ˆã­ãˆ</li>
+                        <li>é«˜å°‚å—é¨“(&çœŒç«‹å—é¨“ã‚‚)ã®çµæžœã¯æ•™ãˆã‚‰ã‚Œã¬ã“ã¨ã‚’æ‰¿çŸ¥ã—ã¦ã»ã—ã„</li>
                         <li>
-                            [é“`] ƒCƒ“ƒLƒƒ‚Ç‚à‚ÌŽI - Discord
+                            [å®£ä¼] ã‚¤ãƒ³ã‚­ãƒ£ã©ã‚‚ã®é¯– - Discord
                             <br><a href="https://discord.gg/cktZYqRk8x">https://discord.gg/cktZYqRk8x</a>
                         </li>
                         <li>
-                            EEW(‹Ù‹}’nk‘¬•ñ)botƒeƒXƒ^[•åW
-                            <br>“à—e
-                            <br>@‹Ù‹}’nk‘¬•ñ(Œx•ñ)‚ðŽóM‚µ‚½‚çŽ©“®“Še&Œx•\Ž¦‚ðs‚¤BƒGƒ‰[‚Ì•ñ‚ðŠè‚¢‚½‚¢B
+                            EEW(ç·Šæ€¥åœ°éœ‡é€Ÿå ±)botãƒ†ã‚¹ã‚¿ãƒ¼å‹Ÿé›†
+                            <br>å†…å®¹
+                            <br>ã€€ç·Šæ€¥åœ°éœ‡é€Ÿå ±(è­¦å ±)ã‚’å—ä¿¡ã—ãŸã‚‰è‡ªå‹•æŠ•ç¨¿&è­¦å‘Šè¡¨ç¤ºã‚’è¡Œã†ã€‚ã‚¨ãƒ©ãƒ¼ã®å ±å‘Šã‚’é¡˜ã„ãŸã„ã€‚
                         </li>
-                        <li>NETROOM Daek versionŠJ”­’†@‹@”\‚Ì—v–]ƒEƒFƒ‹ƒJƒ€</li>
+                        <li>NETROOM Daek versioné–‹ç™ºä¸­ã€€æ©Ÿèƒ½ã®è¦æœ›ã‚¦ã‚§ãƒ«ã‚«ãƒ </li>
                     </ul>
                 </blockquote>
             </section>
             <hr>
             <section>
-                <h2 id="me">Ž©ŒÈÐ‰î</h2>
+                <h2 id="me">è‡ªå·±ç´¹ä»‹</h2>
                 <table>
                     <tbody>
                         <tr>
                             <td width="120" align="LEFT">
-                                –¼<br>
+                                å<br>
                                 <br>
                             </td>
                             <td align="LEFT">
@@ -148,51 +149,51 @@
                         </tr>
                         <tr>
                             <td align="LEFT">
-                                ¶”NŒŽ“ú<br>
+                                ç”Ÿå¹´æœˆæ—¥<br>
                                 <br>
                             </td>
                             <td align="LEFT">
-                                2009”N1ŒŽ17“ú@‚â‚¬À ‰N”N<br>
-                                <br>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="LEFT">
-                                ŒŒ‰tŒ^<br>
-                                <br>
-                            </td>
-                            <td align="LEFT">
-                                •s–¾<br>
+                                2009å¹´1æœˆ17æ—¥ã€€ã‚„ãŽåº§ ä¸‘å¹´<br>
                                 <br>
                             </td>
                         </tr>
                         <tr>
                             <td align="LEFT">
-                                og’n<br>
+                                è¡€æ¶²åž‹<br>
                                 <br>
                             </td>
                             <td align="LEFT">
-                                ”ñŒöŠJ<br>
-                                <br>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="LEFT">
-                                Šw—ð<br>
-                                <br>
-                            </td>
-                            <td align="LEFT">
-                                ”ñŒöŠJ<br>
+                                ä¸æ˜Ž<br>
                                 <br>
                             </td>
                         </tr>
                         <tr>
                             <td align="LEFT">
-                                ƒTƒCƒY<br>
+                                å‡ºèº«åœ°<br>
                                 <br>
                             </td>
                             <td align="LEFT">
-                                g’·159‚ƒ‚ ‘Ìd 45‚j‚‡ ŒC 25‚ƒ‚<br>
+                                éžå…¬é–‹<br>
+                                <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="LEFT">
+                                å­¦æ­´<br>
+                                <br>
+                            </td>
+                            <td align="LEFT">
+                                éžå…¬é–‹<br>
+                                <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="LEFT">
+                                ã‚µã‚¤ã‚º<br>
+                                <br>
+                            </td>
+                            <td align="LEFT">
+                                èº«é•·159ï½ƒï½ ä½“é‡ 45ï¼«ï½‡ é´ 25ï½ƒï½<br>
                                 <br>
                             </td>
                         </tr>
@@ -208,11 +209,11 @@
                         </tr>
                         <tr>
                             <td align="LEFT">
-                                Žï–¡<br>
+                                è¶£å‘³<br>
                                 <br>
                             </td>
                             <td align="LEFT">
-                                ƒvƒƒuƒ‰ƒ~ƒ“ƒOAƒsƒAƒm<br>
+                                ãƒ—ãƒ­ãƒ–ãƒ©ãƒŸãƒ³ã‚°ã€ãƒ”ã‚¢ãƒŽ<br>
                                 <br>
                             </td>
                         </tr>
