--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><meta charset="UTF-8"><title>AAAAAAAAAAAA'sHP</title></head><frameset rows="100%"><frame src="main.html" marginheight="0" marginwidth="0" scrolling="auto" name="main"></frameset><noframes><body></body></noframes></html>
+<html><head><meta charset="shift_jis"><title>AAAAAAAAAAAA'sHP</title></head><frameset rows="100%"><frame src="main.html" marginheight="0" marginwidth="0" scrolling="auto" name="main"></frameset><noframes><body></body></noframes></html>
