--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>AAAAAAAAAAAA'sHP</title></head><frameset rows="100%"><frame src="main.html" marginheight="0" marginwidth="0" scrolling="auto" name="main"></frameset><noframes><body></body></noframes></html>
+<!DOCTYPE html><html><head><meta charset="UTF-8"><title>AAAAAAAAAAAA'sHP</title></head><frameset rows="100%"><frame src="main.html" marginheight="0" marginwidth="0" scrolling="auto" name="main"></frameset><noframes><body></body></noframes></html>
