--- a/main.html
+++ b/main.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -74,22 +73,59 @@
             color: #696969;
             font-family: "Noto Serif JP", serif;
         }
+
+        a {
+            color: #acb400;
+        }
+
+            /*--hover 後--*/
+            a:hover {
+                color: #ff7d00; /*-- 文字色をオレンジ色 --*/
+            }
+
+        .den {
+            font-family: "Noto Serif JP", serif;
+        }
+        .copy {
+            height: 40px;
+            line-height: 40px;
+            background-color: #fff200;
+        }
     </style>
+    <script>
+        // ページ内リンクがクリックされた際の処理
+        document.addEventListener('DOMContentLoaded', function () {
+            var links = document.querySelectorAll('a[href^="#"]');
+            links.forEach(function (link) {
+                link.addEventListener('click', function (e) {
+                    e.preventDefault(); // デフォルトの挙動をキャンセル
+                    var targetId = this.getAttribute('href').substring(1); // リンク先のIDを取得
+                    var targetElement = document.getElementById(targetId); // リンク先の要素を取得
+                    var headerHeight = document.querySelector('.header').offsetHeight; // ヘッダーの高さを取得
+                    var targetOffsetTop = targetElement.offsetTop - headerHeight; // ヘッダーの高さを考慮したスクロール位置を計算
+                    window.scrollTo({
+                        top: targetOffsetTop,
+                        behavior: 'auto' // アニメーションなし
+                    });
+                });
+            });
+        });
+    </script>
 </head>
 <body>
     <header class="header">
         <div class="header-inner">
-            <a href="https://aaaaaaaaaaaanetroom.github.io/">
+            <a href="https://aaaaaaaaaaaanetroom.github.io/" target="_blank">
                 <img src="logo.png" alt="AAAAAAAAAAAA" width="182" height="56">
             </a>
             <nav class="header-nav">
                 <ul class="header-nav-list">
                     <li class="header-nav-item" style="list-style: none;"><a class="header-nav-item-link" href="#news">News</a></li>
                     <li class="header-nav-item" style="list-style: none;"><a class="header-nav-item-link" href="#me">AboutMe</a></li>
-                    <li class="header-nav-item" style="list-style: none;"><a class="header-nav-item-link" href="#">News</a></li>
-                    <li class="header-nav-item" style="list-style: none;"><a class="header-nav-item-link" href="#">Blog</a></li>
-                    <li class="header-nav-item" style="list-style: none; margin-right: 40px;"><a class="header-nav-item-link" href="#">Contact</a></li>
-                    </ul>
+                    <li class="header-nav-item" style="list-style: none;"><a class="header-nav-item-link" href="#write">Writing</a></li>
+                    <li class="header-nav-item" style="list-style: none;"><a class="header-nav-item-link" href="#tool">Tool</a></li>
+                    <li class="header-nav-item" style="list-style: none; margin-right: 40px;"><a class="header-nav-item-link" href="#contact">Contact</a></li>
+                </ul>
             </nav>
         </div>
     </header>
@@ -122,7 +158,7 @@
                         <li>高専受験(&県立受験も)の結果は教えられぬことを承知してほしい</li>
                         <li>
                             [宣伝] インキャどもの鯖 - Discord
-                            <br><a href="https://discord.gg/cktZYqRk8x">https://discord.gg/cktZYqRk8x</a>
+                            <br><a href="https://discord.gg/cktZYqRk8x" target="_blank">https://discord.gg/cktZYqRk8x</a>
                         </li>
                         <li>
                             EEW(緊急地震速報)botテスター募集
@@ -194,7 +230,7 @@
                                 <br>
                             </td>
                             <td align="LEFT">
-                                身長159ｃｍ 体重 45Ｋｇ 靴 25ｃｍ<br>
+                                身長159ｃｍ 体重 45Ｋｇ 靴 23ｃｍ<br>
                                 <br>
                             </td>
                         </tr>
@@ -221,7 +257,44 @@
                     </tbody>
                 </table>
             </section>
+            <hr>
+            <section>
+                <h2 id="write">自伝</h2>
+                <p><span class="quote">「心に移りゆくよしなし事をそこはかとなく書きつく」</span>ったもの。</p>
+                <h3>一覧</h3>
+                <blockquote>
+                    <ol>
+                        <li class="den"><a href="write1.html" hidden>人間が求むるもの</a>未公開</li>
+                    </ol>
+                </blockquote>
+            </section>
+            <hr>
+            <section>
+                <h2 id="tool">ツール</h2>
+                <blockquote>
+                    <table border="1">
+                        <caption>AAAAAAAAAAAAのツール達</caption>
+                        <thread><tr><th>ツール名</th><th>解説</th><th>使用方法</th></tr></thread>
+                        <tbody>
+                            <tr><th>NETROOM Dark version</th><th>NETROOMの機能を増やす拡張機能<br>特に良い機能はない..かな</th><th><a href="https://aaaaaaaaaaaanetroom.github.io/dark-help/" target="_blank">ここ</a>にて解説</th></tr>
+                        </tbody>
+                    </table>
+                </blockquote>
+            </section>
+            <hr>
+            <section>
+                <h2 id="contact">連絡先</h2>
+                <blockquote>
+                    <h3>部屋</h3>
+                    <p>ここにて連絡、意見承ります。→ <a href="https://netroom.oz96.com/?r=212654" target="_blank">https://netroom.oz96.com/?r=212654</a></p>
+                </blockquote>
+            </section>
         </blockquote>
     </main>
+    <section>
+        <center class="copy">
+            <small>&copy;AAAAAAAAAAAA. All rights reserved.</small>
+        </center>
+    </section>
 </body>
 </html>
