--- a/main.html
+++ b/main.html
@@ -264,7 +264,7 @@
                 <h3>一覧</h3>
                 <blockquote>
                     <ol>
-                        <li class="den"><a href="write1.html" hidden>人間が求むるもの</a>未公開</li>
+                        <li class="den"><a href="write1.html">社会の歯車</a></li>
                     </ol>
                 </blockquote>
             </section>
