--- a/write1.html
+++ b/write1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta charset="UFT-8">
+    <meta charset="uft-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
