--- a/main.html
+++ b/main.html
@@ -260,7 +260,7 @@
             <hr>
             <section>
                 <h2 id="write">自伝</h2>
-                <p><span class="quote">「心に移りゆくよしなし事をそこはかとなく書きつく」</span>ったもの。</p>
+                <p><span class="quote">「心に移りゆくよしなし事をそこはかとなく書きつく」</span>ったもの。(短いけどね</p>
                 <h3>一覧</h3>
                 <blockquote>
                     <ol>
