--- a/main.html
+++ b/main.html
@@ -116,7 +116,7 @@
     <header class="header">
         <div class="header-inner">
             <a href="https://aaaaaaaaaaaanetroom.github.io/" target="_blank">
-                <img src="logo.png" alt="AAAAAAAAAAAA" width="182" height="56">
+                <img src="logo1.png" alt="AAAAAAAAAAAA" width="182" height="56">
             </a>
             <nav class="header-nav">
                 <ul class="header-nav-list">
