--- a/main.html
+++ b/main.html
@@ -86,6 +86,7 @@
         .den {
             font-family: "Noto Serif JP", serif;
         }
+
         .copy {
             height: 40px;
             line-height: 40px;
@@ -140,32 +141,17 @@
             <hr>
             <section>
                 <h2 id="news">>>お知らせ<<</h2>
-                <small>最終更新 2024/02/14</small>
+                <small>最終更新 2024/03/20</small>
                 <blockquote>
                     <ul>
+                        <li>しばらく休養してました</li>
+                        <li>花粉は逝ってヨシ</li>
+                        <img src="sii1.gif" alt="逝ってヨシ！！">
                         <li>
-                            ☆令和六年度国立高専入学本試験自己採点速報☆
-                            <br>英:80
-                            <br>数:74
-                            <br>理:79
-                            <br>国:54
-                            <br>社:84
-                            <br>───
-                            <br>計371
-                            <br>国語カス過去問では90取れてたのに何なの
-                        </li>
-                        <li>雑談暇あったら参加しようかな、でもトピックないんだよねえ</li>
-                        <li>高専受験(&県立受験も)の結果は教えられぬことを承知してほしい</li>
-                        <li>
-                            [宣伝] インキャどもの鯖 - Discord
+                            [宣伝] ぶすくてら(仮名称) - Discord
                             <br><a href="https://discord.gg/cktZYqRk8x" target="_blank">https://discord.gg/cktZYqRk8x</a>
                         </li>
-                        <li>
-                            EEW(緊急地震速報)botテスター募集
-                            <br>内容
-                            <br>　緊急地震速報(警報)を受信したら自動投稿&警告表示を行う。エラーの報告を願いたい。
-                        </li>
-                        <li>NETROOM Daek version開発中　機能の要望ウェルカム</li>
+
                     </ul>
                 </blockquote>
             </section>
@@ -230,7 +216,7 @@
                                 <br>
                             </td>
                             <td align="LEFT">
-                                身長159ｃｍ 体重 45Ｋｇ 靴 23ｃｍ<br>
+                                身長159ｃｍ 体重 45Ｋｇ 靴 24ｃｍ<br>
                                 <br>
                             </td>
                         </tr>
@@ -260,7 +246,7 @@
             <hr>
             <section>
                 <h2 id="write">自伝</h2>
-                <p><span class="quote">「心に移りゆくよしなし事をそこはかとなく書きつく」</span>ったもの。(短いけどね</p>
+                <p><span class="quote">「心に移りゆくよしなし事をそこはかとなく書きつく」</span>ったもの。</p>
                 <h3>一覧</h3>
                 <blockquote>
                     <ol>
