--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@
                     var targetOffsetTop = targetElement.offsetTop - headerHeight; // ヘッダーの高さを考慮したスクロール位置を計算
                     window.scrollTo({
                         top: targetOffsetTop,
-                        behavior: 'auto' // アニメーションなし
+                        behavior: 'auto'
                     });
                 });
             });
