--- a/main.html
+++ b/main.html
@@ -76,11 +76,9 @@
 
         a {
             color: #acb400;
-        }
-
-            /*--hover 後--*/
+        
             a:hover {
-                color: #ff7d00; /*-- 文字色をオレンジ色 --*/
+                color: #ff7d00;
             }
 
         .den {
@@ -94,16 +92,15 @@
         }
     </style>
     <script>
-        // ページ内リンクがクリックされた際の処理
         document.addEventListener('DOMContentLoaded', function () {
             var links = document.querySelectorAll('a[href^="#"]');
             links.forEach(function (link) {
                 link.addEventListener('click', function (e) {
-                    e.preventDefault(); // デフォルトの挙動をキャンセル
-                    var targetId = this.getAttribute('href').substring(1); // リンク先のIDを取得
-                    var targetElement = document.getElementById(targetId); // リンク先の要素を取得
-                    var headerHeight = document.querySelector('.header').offsetHeight; // ヘッダーの高さを取得
-                    var targetOffsetTop = targetElement.offsetTop - headerHeight; // ヘッダーの高さを考慮したスクロール位置を計算
+                    e.preventDefault();
+                    var targetId = this.getAttribute('href').substring(1);
+                    var targetElement = document.getElementById(targetId);
+                    var headerHeight = document.querySelector('.header').offsetHeight;
+                    var targetOffsetTop = targetElement.offsetTop - headerHeight;
                     window.scrollTo({
                         top: targetOffsetTop,
                         behavior: 'auto'
